--- a/מודולים/בסיס - למידה חישובית/5. Fixing a corrupted model/Corrupted models.ipynb
+++ b/מודולים/בסיס - למידה חישובית/5. Fixing a corrupted model/Corrupted models.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-06T12:25:12.125996Z",
@@ -734,10 +734,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
     "def train_model(features):\n",
     "    lgb = LGBMRegressor(n_estimators=10**4, max_depth=9, num_leaves=20,colsample_bytree=0.7, subsample=0.9, learning_rate=0.5)\n",
     "    lgb.fit(df_train[features], df_train['cr_gaus'], verbose=100)\n",
@@ -816,6 +818,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train MSE 0.08101017528518288\n",
+      "test MSE 0.10293451067437084\n",
+      "train MAE 0.22269436725785666\n",
+      "test MAE 0.23014458870668011\n"
+     ]
+    }
+   ],
+   "source": [
+    "features = ['weekday', 'hour', 'hourcat', 'sin604800', 'sample_t']\n",
+    "train_model(features)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
@@ -839,13 +862,6 @@
     "\n",
     "**Don't forget your plots**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
