--- a/מודולים/בסיס - למידה חישובית/6. Loss function effects/loss function effects.ipynb
+++ b/מודולים/בסיס - למידה חישובית/6. Loss function effects/loss function effects.ipynb
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,6 +763,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(81607,)\n",
+      "(81607, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y_train.shape)\n",
+    "print(X_train_scaled.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -770,38 +789,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(81607,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Y_train.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "flatten_2 (Flatten)          (None, 12)                0         \n",
+      "flatten_1 (Flatten)          (None, 12)                0         \n",
       "_________________________________________________________________\n",
-      "dense_10 (Dense)             (None, 100)               1300      \n",
+      "dense_5 (Dense)              (None, 100)               1300      \n",
       "_________________________________________________________________\n",
-      "dense_11 (Dense)             (None, 100)               10100     \n",
+      "dense_6 (Dense)              (None, 100)               10100     \n",
       "_________________________________________________________________\n",
-      "dense_12 (Dense)             (None, 20)                2020      \n",
+      "dense_7 (Dense)              (None, 20)                2020      \n",
       "_________________________________________________________________\n",
-      "dense_13 (Dense)             (None, 15)                315       \n",
+      "dense_8 (Dense)              (None, 15)                315       \n",
       "_________________________________________________________________\n",
-      "dense_14 (Dense)             (None, 1)                 16        \n",
+      "dense_9 (Dense)              (None, 1)                 16        \n",
       "=================================================================\n",
       "Total params: 13,751\n",
       "Trainable params: 13,751\n",
@@ -827,54 +829,91 @@
     "model.add(Dense(15, activation='tanh'))\n",
     "\n",
     "model.add(Dense(1, activation='linear'))\n",
-    "model.compile(loss='mae', optimizer='adam')\n",
+    "model.compile(loss='mse', optimizer='sgd')\n",
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "2721/2721 - 3s - loss: 122542.2969\n",
-      "Epoch 2/10\n",
-      "2721/2721 - 3s - loss: 122538.6328\n",
-      "Epoch 3/10\n",
-      "2721/2721 - 3s - loss: 122540.3281\n",
-      "Epoch 4/10\n",
-      "2721/2721 - 3s - loss: 122539.7734\n",
-      "Epoch 5/10\n",
-      "2721/2721 - 3s - loss: 122539.1953\n",
-      "Epoch 6/10\n",
-      "2721/2721 - 3s - loss: 122539.2266\n",
-      "Epoch 7/10\n",
-      "2721/2721 - 3s - loss: 122539.1875\n",
-      "Epoch 8/10\n",
-      "2721/2721 - 3s - loss: 122538.7969\n",
-      "Epoch 9/10\n",
-      "2721/2721 - 3s - loss: 122539.7109\n",
-      "Epoch 10/10\n",
-      "2721/2721 - 3s - loss: 122539.1953\n"
+      "Object `model.fit` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "2721/2721 - 2s - loss: 1231242569711616.0000 - val_loss: 3959185664.0000\n",
+      "Epoch 2/20\n",
+      "2721/2721 - 2s - loss: 1233169936285696.0000 - val_loss: 2075303040.0000\n",
+      "Epoch 3/20\n",
+      "2721/2721 - 2s - loss: 1233166446624768.0000 - val_loss: 1089749504.0000\n",
+      "Epoch 4/20\n",
+      "2721/2721 - 2s - loss: 1233165909753856.0000 - val_loss: 576656576.0000\n",
+      "Epoch 5/20\n",
+      "2721/2721 - 2s - loss: 1233165372882944.0000 - val_loss: 304461056.0000\n",
+      "Epoch 6/20\n",
+      "2721/2721 - 2s - loss: 1233165372882944.0000 - val_loss: 159904272.0000\n",
+      "Epoch 7/20\n",
+      "2721/2721 - 2s - loss: 1233165372882944.0000 - val_loss: 83886024.0000\n",
+      "Epoch 8/20\n",
+      "2721/2721 - 2s - loss: 1233165372882944.0000 - val_loss: 55834572.0000\n",
+      "Epoch 9/20\n",
+      "2721/2721 - 2s - loss: 1233165238665216.0000 - val_loss: 29290828.0000\n",
+      "Epoch 10/20\n",
+      "2721/2721 - 2s - loss: 1233158930432000.0000 - val_loss: 105717528.0000\n",
+      "Epoch 11/20\n",
+      "2721/2721 - 2s - loss: 1233165372882944.0000 - val_loss: 55379060.0000\n",
+      "Epoch 12/20\n",
+      "2721/2721 - 2s - loss: 1233165238665216.0000 - val_loss: 29379806.0000\n",
+      "Epoch 13/20\n",
+      "2721/2721 - 2s - loss: 1233163762270208.0000 - val_loss: 61149812.0000\n",
+      "Epoch 14/20\n",
+      "2721/2721 - 2s - loss: 1233165104447488.0000 - val_loss: 47309288.0000\n",
+      "Epoch 15/20\n",
+      "2721/2721 - 2s - loss: 1233165238665216.0000 - val_loss: 24812978.0000\n",
+      "Epoch 16/20\n",
+      "2721/2721 - 2s - loss: 1233165238665216.0000 - val_loss: 13088077.0000\n",
+      "Epoch 17/20\n",
+      "2721/2721 - 2s - loss: 1233162017439744.0000 - val_loss: 63233456.0000\n",
+      "Epoch 18/20\n",
+      "2721/2721 - 2s - loss: 1233165104447488.0000 - val_loss: 33187018.0000\n",
+      "Epoch 19/20\n",
+      "2721/2721 - 2s - loss: 1233165104447488.0000 - val_loss: 21729336.0000\n",
+      "Epoch 20/20\n",
+      "2721/2721 - 2s - loss: 1233164970229760.0000 - val_loss: 11470427.0000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1d159916670>"
+       "<tensorflow.python.keras.callbacks.History at 0x1af45722970>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train_scaled, Y_train, batch_size=30, epochs=10, verbose=2)"
+    "model.fit(X_train_scaled, Y_train, validation_data=(X_test_scaled, Y_test), batch_size=30, epochs=20, verbose=2)"
    ]
   },
   {
@@ -893,7 +932,8 @@
    ],
    "source": [
     "print(\"Train MAE\", mean_absolute_error(Y_train, model.predict(X_train_scaled)))\n",
-    "print(\"Test MAE\", mean_absolute_error(Y_test, model.predict(X_test_scaled)))"
+    "print(\"Test MAE\", mean_absolute_error(Y_test, model.predict(X_test_scaled)))\n",
+    "\n"
    ]
   },
   {
@@ -1162,24 +1202,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nThe main problem is that the limit is not the same from right and from left.\\nWhen we come from negative values, the limit is -inf, but when coming from positives vales, the limit is inf.\\n\\nSecondly, the function is no defined in 0, and not derivable. \\nFurthermore, the function is not convex. For gradient descent we need convex functions.\\n'"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "\"\"\"\n",
-    "The main problem is that the limit is not the same from right and from left.\n",
+    "the limit is not the same from right and from left.\n",
     "When we come from negative values, the limit is -inf, but when coming from positives vales, the limit is inf.\n",
     "\n",
     "Secondly, the function is no defined in 0, and not derivable. \n",
@@ -1712,20 +1739,6 @@
     "\n",
     "\"\"\""
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```Train the best model you can to answer for the field marchel's needs and win the war!```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
