--- a/מודולים/רשתות נוירונים/1. basic usage/basic exercise 2/going deeper - solution.ipynb
+++ b/מודולים/רשתות נוירונים/1. basic usage/basic exercise 2/going deeper - solution.ipynb
@@ -1619,13 +1619,7 @@
       "10000/10000 [==============================] - 0s 15us/step - loss: 0.6321\n",
       "Epoch 84/100\n",
       "10000/10000 [==============================] - 0s 15us/step - loss: 0.6298\n",
-      "Epoch 85/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 85/100\n",
       "10000/10000 [==============================] - 0s 15us/step - loss: 0.6285\n",
       "Epoch 86/100\n",
       "10000/10000 [==============================] - 0s 15us/step - loss: 0.6264\n",
@@ -1717,7 +1711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
