--- a/מודולים/שיטות עיבוד מוקדם/1. groupby exercise/answers_DO_NOT_DELETE/groupby exercise with answers - Philip.ipynb
+++ b/מודולים/שיטות עיבוד מוקדם/1. groupby exercise/answers_DO_NOT_DELETE/groupby exercise with answers - Philip.ipynb
@@ -5476,9 +5476,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "forum4",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "forum4"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5490,7 +5490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
