--- a/מודולים/רשתות נוירונים/2. custom layer/Untitled.ipynb
+++ b/מודולים/רשתות נוירונים/2. custom layer/Untitled.ipynb
@@ -47,6 +47,7 @@
    "source": [
     "digits = [0, 1, 2, 3, 4, 5, 6]\n",
     "padding_length = 25\n",
+    "n_sequences = 100000\n",
     "\n",
     "def create_seq(baseline_in, padding_length, p=0.5, padding_symbol=8):\n",
     "    baseline_length_in = len(baseline_in)\n",
@@ -90,12 +91,12 @@
     "baseline_length = 3\n",
     "right_baseline = [1,3,2]\n",
     "\n",
-    "good_list = list(create_sequences(10000, right_baseline))\n",
-    "wrong_list = list(create_wrong_sequences(10000, right_baseline))\n",
+    "good_list = list(create_sequences(n_sequences, right_baseline))\n",
+    "wrong_list = list(create_wrong_sequences(n_sequences, right_baseline))\n",
     "\n",
     "data = good_list + wrong_list\n",
     "data, places = list(map(lambda x: x[0], data)), list(map(lambda x: x[1], data))\n",
-    "target = [True]*10000+[False]*10000\n",
+    "target = [True]*n_sequences+[False]*n_sequences\n",
     "\n",
     "good_data = good_list\n",
     "good_data, places = list(map(lambda x: x[0], good_data)), list(map(lambda x: x[1], good_data))\n",
@@ -686,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
