--- a/מודולים/רשתות נוירונים/3. embedding layers/embedding layer exercise.ipynb
+++ b/מודולים/רשתות נוירונים/3. embedding layers/embedding layer exercise.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['user_id', 'grade', 'date', 'num'], dtype='object')\n",
+      "(500000, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"resources/combined_data.csv\", nrows=500000)\n",
+    "print(df.columns)\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -109,33 +129,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>99995</th>\n",
-       "      <td>1353371</td>\n",
-       "      <td>17769</td>\n",
-       "      <td>4</td>\n",
+       "      <th>499995</th>\n",
+       "      <td>178520</td>\n",
+       "      <td>148</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99996</th>\n",
-       "      <td>2382106</td>\n",
-       "      <td>17769</td>\n",
+       "      <th>499996</th>\n",
+       "      <td>1257939</td>\n",
+       "      <td>148</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499997</th>\n",
+       "      <td>1700782</td>\n",
+       "      <td>148</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99997</th>\n",
-       "      <td>1146272</td>\n",
-       "      <td>17769</td>\n",
-       "      <td>2</td>\n",
+       "      <th>499998</th>\n",
+       "      <td>380354</td>\n",
+       "      <td>148</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99998</th>\n",
-       "      <td>2220847</td>\n",
-       "      <td>17769</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99999</th>\n",
-       "      <td>1473980</td>\n",
-       "      <td>17770</td>\n",
+       "      <th>499999</th>\n",
+       "      <td>753663</td>\n",
+       "      <td>148</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -143,15 +163,15 @@
        "</div>"
       ],
       "text/plain": [
-       "       user_id  movie_id  rating\n",
-       "99995  1353371     17769       4\n",
-       "99996  2382106     17769       2\n",
-       "99997  1146272     17769       2\n",
-       "99998  2220847     17769       2\n",
-       "99999  1473980     17770       4"
+       "        user_id  movie_id  rating\n",
+       "499995   178520       148       3\n",
+       "499996  1257939       148       5\n",
+       "499997  1700782       148       2\n",
+       "499998   380354       148       1\n",
+       "499999   753663       148       4"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,14 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset shape: (100000, 3)\n"
+      "Dataset shape: (500000, 3)\n"
      ]
     }
    ],
@@ -181,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,15 +246,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77113\n",
-      "9310\n"
+      "215008\n",
+      "148\n"
      ]
     }
    ],
@@ -248,51 +268,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"functional_15\"\n",
-      "__________________________________________________________________________________________________\n",
-      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      "input_15 (InputLayer)           [(None, 1)]          0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "input_16 (InputLayer)           [(None, 1)]          0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "embedding_14 (Embedding)        (None, 1, 20)        1542260     input_15[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "embedding_15 (Embedding)        (None, 1, 20)        186200      input_16[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "concatenate_7 (Concatenate)     (None, 1, 40)        0           embedding_14[0][0]               \n",
-      "                                                                 embedding_15[0][0]               \n",
-      "__________________________________________________________________________________________________\n",
-      "flatten_7 (Flatten)             (None, 40)           0           concatenate_7[0][0]              \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_28 (Dense)                (None, 40)           1640        flatten_7[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_29 (Dense)                (None, 20)           820         dense_28[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_30 (Dense)                (None, 10)           210         dense_29[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_31 (Dense)                (None, 1)            11          dense_30[0][0]                   \n",
-      "==================================================================================================\n",
-      "Total params: 1,731,141\n",
-      "Trainable params: 1,731,141\n",
-      "Non-trainable params: 0\n",
-      "__________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.models import Model\n",
     "from keras.layers import Input, Embedding, Dense, concatenate, Flatten\n",
     "\n",
-    "user_dim = 20\n",
-    "movie_dim = 20\n",
+    "user_dim = 15\n",
+    "movie_dim = 8\n",
     "\n",
     "x_user = Input(shape = (1,))\n",
     "embedding_user = Embedding(input_dim = len(list_unique_user_id), output_dim = user_dim, dtype='float32', input_length=1)(x_user)\n",
@@ -304,61 +288,111 @@
     "\n",
     "flatten = Flatten()(concat)\n",
     "dense1 = Dense(units = (user_dim + movie_dim), activation = 'tanh')(flatten)\n",
-    "dense2 = Dense(units = int((user_dim + movie_dim)/2), activation = 'tanh')(dense1)\n",
-    "dense3 = Dense(units = int((user_dim + movie_dim)/4), activation = 'tanh')(dense2)\n",
+    "dense2 = Dense(units = int((user_dim + movie_dim)), activation = 'tanh')(dense1)\n",
+    "dense3 = Dense(units = int((user_dim + movie_dim)), activation = 'tanh')(dense2)\n",
+    "# dense4 = Dense(units = int((user_dim + movie_dim)), activation = 'tanh')(dense3)\n",
     "output_layer = Dense(units = 1, activation = 'linear')(dense3)\n",
     "\n",
-    "model = Model(inputs = [x_user, x_movie], outputs = output_layer)\n",
-    "model.compile(optimizer = 'adam', loss = 'mse')\n",
-    "model.summary()"
+    "model = Model(inputs = [x_user, x_movie], outputs = output_layer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "70/70 - 2s - loss: 7.2966 - val_loss: 1.4762\n",
-      "Epoch 2/10\n",
-      "70/70 - 2s - loss: 1.1572 - val_loss: 1.1517\n",
-      "Epoch 3/10\n",
-      "70/70 - 2s - loss: 0.9466 - val_loss: 1.1935\n",
-      "Epoch 4/10\n",
-      "70/70 - 2s - loss: 0.6743 - val_loss: 1.2242\n",
-      "Epoch 5/10\n",
-      "70/70 - 2s - loss: 0.4492 - val_loss: 1.2616\n",
-      "Epoch 6/10\n",
-      "70/70 - 2s - loss: 0.3267 - val_loss: 1.2778\n",
-      "Epoch 7/10\n",
-      "70/70 - 2s - loss: 0.2599 - val_loss: 1.3063\n",
-      "Epoch 8/10\n",
-      "70/70 - 2s - loss: 0.2142 - val_loss: 1.3404\n",
-      "Epoch 9/10\n",
-      "70/70 - 2s - loss: 0.1834 - val_loss: 1.3710\n",
-      "Epoch 10/10\n",
-      "70/70 - 2s - loss: 0.1652 - val_loss: 1.3919\n"
+      "Model: \"functional_19\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_19 (InputLayer)           [(None, 1)]          0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_20 (InputLayer)           [(None, 1)]          0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "embedding_18 (Embedding)        (None, 1, 15)        3225120     input_19[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "embedding_19 (Embedding)        (None, 1, 8)         1184        input_20[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_9 (Concatenate)     (None, 1, 23)        0           embedding_18[0][0]               \n",
+      "                                                                 embedding_19[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_9 (Flatten)             (None, 23)           0           concatenate_9[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_40 (Dense)                (None, 23)           552         flatten_9[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_41 (Dense)                (None, 23)           552         dense_40[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_42 (Dense)                (None, 23)           552         dense_41[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_43 (Dense)                (None, 1)            24          dense_42[0][0]                   \n",
+      "==================================================================================================\n",
+      "Total params: 3,227,984\n",
+      "Trainable params: 3,227,984\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "optimizer = keras.optimizers.Adam(lr=0.0001)\n",
+    "model.compile(optimizer = optimizer, loss = 'mse')\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "350/350 [==============================] - 19s 54ms/step - loss: 8.9703 - val_loss: 2.4293\n",
+      "Epoch 2/100\n",
+      "350/350 [==============================] - 19s 53ms/step - loss: 1.2649 - val_loss: 1.0557\n",
+      "Epoch 3/100\n",
+      "350/350 [==============================] - 17s 49ms/step - loss: 1.0024 - val_loss: 1.0197\n",
+      "Epoch 4/100\n",
+      "350/350 [==============================] - 18s 50ms/step - loss: 0.9347 - val_loss: 1.0131\n",
+      "Epoch 5/100\n",
+      "350/350 [==============================] - 18s 51ms/step - loss: 0.8422 - val_loss: 1.0302\n",
+      "Epoch 6/100\n",
+      "350/350 [==============================] - 18s 52ms/step - loss: 0.7390 - val_loss: 1.0729\n",
+      "Epoch 7/100\n",
+      "350/350 [==============================] - 19s 55ms/step - loss: 0.6506 - val_loss: 1.1223\n",
+      "Epoch 8/100\n",
+      "350/350 [==============================] - 18s 52ms/step - loss: 0.5854 - val_loss: 1.1617\n",
+      "Epoch 9/100\n",
+      "350/350 [==============================] - 18s 51ms/step - loss: 0.5395 - val_loss: 1.1916\n",
+      "Epoch 00009: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x22f6e9e1dc0>"
+       "<tensorflow.python.keras.callbacks.History at 0x21a24af0220>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from keras.callbacks import EarlyStopping\n",
+    "\n",
+    "es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=5)\n",
+    "callbacks_list = [es]\n",
+    "\n",
     "model.fit(x=[X_train['user_id_transformed'], X_train['movie_id_transformed']], y=y_train, \n",
     "         validation_data=([X_test['user_id_transformed'], X_test['movie_id_transformed']], y_test),\n",
-    "         epochs=10, verbose=2, batch_size = 1000)"
+    "         epochs=100, verbose=1, batch_size = 1000, callbacks=callbacks_list)"
    ]
   },
   {
